k8s-exp/pg-tcp-fwd/pgsvc.yaml
apiVersion: v1

kind: Service

metadata:
  name: minipg
  labels:
    app: minipg

spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432

  selector:
    app: minipg
